[package]
name = "airplane_game"
description = "Airplane game created in rust!"
version = "1.0.0"
authors = ["Benjamin <benjaminprogrammering@gmail.com>"]
edition = "2018"
exclude = ["resources", "!LiberationMono-Regular.ttf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.9"
ggez = "0.6.0-rc1"
rand = "0.8.3"
cgmath = { version = "0.17", features = ["mint"] }
